tests/rt/neg/ifc/pini_d.trp
(* testing corner case of declassification when destructing *)
let val secretAlice = 1 raisedTo `<alice;#root-integrity>`
    val secretBob = 1 raisedTo `<bob;#root-integrity>`

    val a = if secretAlice > 0 then (1,2) else (3,4)
    val b = if secretBob > 0 then (5,6) else (7,8)
    val _ = blockdecl authority
    val _ = case a of (a1, a2)     => a1+a2
                   |  (a1, a2, a3) => a1+a2+a3
                   |  _            => a
in
    adv ()
end
